--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test PORT=1234 jest tests/badges.test.js"
+    "test": "NODE_ENV=test PORT=1234 jest tests/badges.test.js",
+    "start": "NODE_ENV=production node index.js"
   },
   "keywords": [],
   "author": "Sebastian Buitrago <johanbuitrago342@gmail.com>",
