--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test PORT=1234 jest tests/badges.test.js",
-    "start": "NODE_ENV=production node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Sebastian Buitrago <johanbuitrago342@gmail.com>",
