--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "NODE_ENV=test PORT=1234 jest tests/badges.test.js",
     "start": "node index.js"
@@ -11,19 +12,19 @@
   "author": "Sebastian Buitrago <johanbuitrago342@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "5.0.1",
+    "body-parser": "^1.20.2",
     "cors": "2.8.5",
-    "dotenv": "10.0.0",
-    "express": "4.17.1",
-    "jsonwebtoken": "8.5.1",
-    "mongoose": "5.13.5",
-    "mongoose-unique-validator": "2.0.3"
+    "dotenv": "16.4.5",
+    "express": "4.19.2",
+    "jsonwebtoken": "9.0.2",
+    "mongoose": "8.2.4",
+    "mongoose-unique-validator": "5.0.0"
   },
   "devDependencies": {
-    "jest": "^27.5.1",
-    "nodemon": "2.0.12",
-    "standard": "16.0.3",
-    "supertest": "6.1.4"
+    "jest": "^29.7.0",
+    "nodemon": "3.1.0",
+    "standard": "17.1.0",
+    "supertest": "6.3.4"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json",
